Wed Oct 27 22:16:12 UTC 2010  Steve Huston  <shuston@riverace.com>

        * ace/INET_Addr.cpp (set): When looking up a hostname, always use
          gethostbyname() for IPv4 requests, even if IPv6 is available.
          getaddrinfo() (used when IPv4 and 6 are both available) is hugely
          slower than gethostbyname() in large vlan environments. Note that
          even though gethostbyname() can grok IPv6 on Linux, it can't
          anywhere else, so I avoided trying to go that route.

Wed Oct 27 19:35:09 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * debian/libace-5.8.3.docs:
        * rpmbuild/ace-tao.spec:
          FAQ got removed

Wed Oct 27 17:47:55 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-g++-common.h:
        * examples/APG/Logging/Trace.h:
        * examples/APG/Logging/Trace_Return.cpp:
        * examples/APG/Logging/Wrap_Macros.cpp:
          Removed support for GCC < 3

Wed Oct 27 17:40:19 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/Download.html:
          Make x.8.3 available for download

        * debian/ace.dsc:
          Updated size and md5

        * rpmbuild/ace-tao.spec:
          Corrected executable names

Wed Oct 27 12:29:47 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/index.html:
          Added x.8.3

        * bin/diff-builds-and-group-fixed-tests-only.sh:
          Updated for x.8.3

        * bin/make_release.py:
          Generate spaces and removed some not needed excludes

        * bin/generate_rel_manpages:
          Print a message when we are ready

Wed Oct 27 10:38:47 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ChangeLog:
        * NEWS:
          Updated for next release

Wed Oct 27 12:01:05 CEST 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

       * ACE version 5.8.3 released.

Tue Oct 26 11:21:35 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/diff-builds-and-group-fixed-tests-only.sh: